# Simple_ZeroMQ_CMake_Cpp_Project_Example

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
